--- a/public/styles/bookPage.css
+++ b/public/styles/bookPage.css
@@ -258,6 +258,7 @@ main {
   align-items: center;
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.5);
+  z-index: 9999;
 }
 
 .reviews.active {
